--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+elasticsearch = "8.5.0-alpha.1"
+tokio = { version = "*", features = ["full"] }
 serde_json = "1.0.91"
