--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ elasticsearch = "8.5.0-alpha.1"
 # tokio = { version = "*", features = ["full"] }
 serde_json = "1.0.91"
 env_logger = "0.10.0"
+thiserror = "1.0.38"
