--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 elasticsearch = "8.5.0-alpha.1"
-# tokio = { version = "*", features = ["full"] }
+tokio = { version = "*", features = ["full"] }
 serde_json = "1.0.91"
 env_logger = "0.10.0"
 thiserror = "1.0.38"
 # nanoid = "0.4.0"
+futures = "0.3.27"
