--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dps"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,5 +14,5 @@ tokio = { version = "*", features = ["full"] }
 serde_json = "1.0.91"
 env_logger = "0.10.0"
 thiserror = "1.0.38"
-# nanoid = "0.4.0"
 futures = "0.3.27"
+actix-cors = "0.6.4"
