--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 elasticsearch = "8.5.0-alpha.1"
 tokio = { version = "*", features = ["full"] }
-serde_json = "1.0.91"
+serde_json = "1"
 env_logger = "0.10.0"
 thiserror = "1.0.38"
 futures = "0.3.27"
 actix-cors = "0.6.4"
+
+[profile.release]
+lto = "thin"
