--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ fastrand = "1.9.0" # Used to know which shard should the document go
 mimalloc = "0.1.36" # Microsoft mimalloc memory allocator
 actix-multipart = "0.6.0" # Upload file
 csv = "1.2.1" # Import from CSV/TSV files
+ijson = "0.1.3" # For less memory usage vs serde json value
 
 [profile.release]
 lto = "fat" # Link Time Optimization
