--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nanoid = "0.4.0" # Used to generate document id
 fastrand = "1.9.0" # Used to know which shard should the document go
 actix-multipart = "0.6.0" # Upload file
 csv = "1.2.1" # Import from CSV/TSV files
+mimalloc = { version = "*", default-features = false } # Microsoft mimalloc memory allocator
 ijson = "0.1.3" # For less memory usage vs serde json value
 
 [profile.release]
